paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/preprocessing_directives/scope_of_macro_1/sample_005/target.compile.log
error[E0277]: `main` has invalid return type `i32`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/preprocessing_directives/scope_of_macro_1/sample_005/target.rs:1:14
  |
1 | fn main() -> i32 {
  |              ^^^ `main` can only return types that implement `Termination`
  |
  = help: consider using `()`, or a `Result`

warning: value assigned to `tabsize` is never read
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/preprocessing_directives/scope_of_macro_1/sample_005/target.rs:7:13
  |
7 |     let mut tabsize: i32 = 0;
  |             ^^^^^^^
  |
  = help: maybe it is overwritten before being read?
  = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.